Linkando os itens do Menu e Aproximando o Css do Figma

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <div id="quadradobranco"></div>
         <h1>Pet Shop</h1>
     <div id="Menu-Off">
         <ul>
@@ -28,8 +29,9 @@
     </header>
     <main>
         <section id="principal">
-            <h2> Encontre seu melhor Amigo</h2>
-            <p>Parceiros para uma Vida Mais Feliz!</p>
+            <h2> Encontre seu</h2>
+            <h2> Melhor <span style="color: rgb(177, 131, 75)">Amigo</span></h2>
+            <p><b>Parceiros para uma Vida Mais Feliz!</b></p>
             <button>Nossos Serviços</button>
             <div id="Serviços">
                 <div id="Serviçoimg">
