Adicionando Imagem e Quadrado para Serviços

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <header>
         <div id="quadradobranco"></div>
+        <div id="cachorro"><img src="assets/img/cachorro.png" alt="cachorro"/></div>
+        <div id="quadrado"></div>
         <h1>Pet Shop</h1>
     <div id="Menu-Off">
         <ul>
