Finalizando a Estilização dos Quadrados/Serviços

--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
         <div id="quadradobranco"></div>
         <div id="cachorro"><img src="assets/img/cachorro.png" alt="cachorro"/></div>
         <div id="quadrado"></div>
+        <div id="quadradoA">
+            <img id="imagem1" src="assets/img/banho.png" alt="Banho e Tosa">
+            <p>Banho e</p>
+            <p>Tosa </p></div>
+        <div id="quadradoB">
+            <img id="imagem2" src="assets/img/medico.png" alt="Clinica Médica">
+            <p>Clinica</p>
+            <p>Médica</p>
+        </div>
+        <div id="quadradoC">
+            <img id="imagem3" src="assets/img/pets.png" alt="PetShop">
+            <p>Pet</p>
+            <p>Shop</p>
+        </div>
         <h1>Pet Shop</h1>
     <div id="Menu-Off">
         <ul>
@@ -35,11 +49,12 @@
             <h2> Melhor <span style="color: rgb(177, 131, 75)">Amigo</span></h2>
             <p><b>Parceiros para uma Vida Mais Feliz!</b></p>
             <button>Nossos Serviços</button>
-            <div id="Serviços">
-                <div id="Serviçoimg">
-                    Banho e Tosa
-                </div>
         </section>
+        <div id="Contato">
+            <div id="Contatoimg">
+                Contato
+            </div>
+        </div>
     </main>
 
 
