Finalizando a Home do Site

--- a/index.html
+++ b/index.html
@@ -12,16 +12,22 @@
         <div id="quadradobranco"></div>
         <div id="cachorro"><img src="assets/img/cachorro.png" alt="cachorro"/></div>
         <div id="quadrado"></div>
-        <div id="quadradoA">
+        <!--Quadrado Vermelho (Banho e Tosa)-->
+        <div id="quadradoA"
+         onclick="window.location.href='assets/index/sobre'">
             <img id="imagem1" src="assets/img/banho.png" alt="Banho e Tosa">
             <p>Banho e</p>
-            <p>Tosa </p></div>
-        <div id="quadradoB">
-            <img id="imagem2" src="assets/img/medico.png" alt="Clinica Médica">
-            <p>Clinica</p>
-            <p>Médica</p>
+            <p>Tosa </p>
         </div>
-        <div id="quadradoC">
+        <!--Quadrado Roxo (Produtos)-->
+        <div id="quadradoB"
+         onclick="window.location.href='assets/index/produtos'">
+            <img id="imagem2" src="assets/img/medico.png" alt="Produtos">
+            <p>Produtos</p>
+        </div>
+        <!--Quadrado Azul (Pet Shop)-->
+        <div id="quadradoC"
+         onclick="window.location.href='assets/index/pets'">
             <img id="imagem3" src="assets/img/pets.png" alt="PetShop">
             <p>Pet</p>
             <p>Shop</p>
@@ -51,9 +57,8 @@
             <button>Nossos Serviços</button>
         </section>
         <div id="Contato">
-            <div id="Contatoimg">
-                Contato
-            </div>
+            <img src="assets/img/zap.PNG" alt="WhatsApp" id="zapicon">
+            Contato
         </div>
     </main>
 
