Finalizando a Aba Sobre, com Menu Hamburguer e Layout Padrão do Site

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PetShop</title>
-<!--Chamando CSS Externo-->
+    <!--Chamando CSS Externo-->
     <link rel="stylesheet" href="./assets/css/estilo.css">
 </head>
 <body>
@@ -12,25 +12,23 @@
         <div id="quadradobranco"></div>
         <div id="cachorro"><img src="assets/img/cachorro.png" alt="cachorro"/></div>
         <div id="quadrado"></div>
-        <!--Quadrado Vermelho (Banho e Tosa)-->
+        <!--Quadrado Vermelho (Sobre)-->
         <div id="quadradoA"
-         onclick="window.location.href='assets/index/sobre'">
-            <img id="imagem1" src="assets/img/banho.png" alt="Banho e Tosa">
-            <p>Banho e</p>
-            <p>Tosa </p>
+         onclick="window.location.href='sobre.html'">
+            <img id="imagem1" src="assets/img/sobre.png" alt="sobre">
+            <p>Sobre</p>
         </div>
         <!--Quadrado Roxo (Produtos)-->
         <div id="quadradoB"
-         onclick="window.location.href='assets/index/produtos'">
-            <img id="imagem2" src="assets/img/medico.png" alt="Produtos">
+         onclick="window.location.href='produtos.html'">
+            <img id="imagem2" src="assets/img/produtos.png" alt="Produtos">
             <p>Produtos</p>
         </div>
         <!--Quadrado Azul (Pet Shop)-->
         <div id="quadradoC"
-         onclick="window.location.href='assets/index/pets'">
+         onclick="window.location.href='pets.html'">
             <img id="imagem3" src="assets/img/pets.png" alt="PetShop">
-            <p>Pet</p>
-            <p>Shop</p>
+            <p>Pets</p>
         </div>
         <h1>Pet Shop</h1>
     <div id="Menu-Off">
@@ -40,8 +38,8 @@
             <li><a href="pets.html">Pets</a></li>
             <li><a href="produtos.html">Produtos</a></li>
         </ul>
-        <nav>
     </div>
+        <nav>
             <div id="Menu">
                 <span></span>
                 <span></span>
