Finalizando a Parte de Atendimento sobre Pet e Começando as Avaliações

--- a/pets.html
+++ b/pets.html
@@ -40,16 +40,21 @@
         dictum. Morbi sed finibus magna. Morbi bibendum, nisl in mattis convallis, nisi ligula 
         tristique dui, a cursus enim risus eget mi.</b></p>
     <div id="agendar">Clique para Agendar</div>
-    <div id="atendimento"><p id="texto">Horários de atendimento:
+    <div id="atendimento"></div>
+    <p id="texto">Horários de atendimento:
         Segunda: das 09:00 até 18:00
         Terça: das 09:00 até 18:00
         Quarta: das 09:00 até 18:00
         Quinta: das 09:00 até 18:00
         Sexta: das 09:00 até 18:00
         Sábado: das 09:00 até 15:00
-        Domingo: Fechado</p>
-    </div>
+        Domingo: Fechado
+    </p>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29253.52654791266!2d-46.69035877240249!3d-23.57954534235957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59c7dbf9ff57%3A0x4ca8eb5c4f7ecca9!2sFIAP%20-%20Paulista!5e0!3m2!1spt-PT!2sbr!4v1714735636656!5m2!1spt-PT!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="mapa"></iframe>
-    
+    <div id="Avaliacao1"></div>
+        <b id="Nome1">Roberto Spreafico Neto</b>
+        <span id ="Star1" style="color: gold">★★★★★</span>
+        <p id="Ava1"><b>Muito Top, comprei meu pug ai, amei !</b></p>
+
 </body>
 </html>
