--- a/sobre.html
+++ b/sobre.html
@@ -28,13 +28,18 @@
                 </div>
             </nav>
     </header>
-    <p><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis eros nec nibh laoreet pretium ac quis nisl. Nam mattis eros sem, eu sollicitudin justo convallis ac. Aenean dignissim diam nisl, vel sagittis metus porttitor sit amet. Aenean mollis rutrum venenatis. Suspendisse eu erat convallis, luctus mauris vel, gravida magna. Etiam pellentesque justo id tellus lobortis, eu pellentesque lorem vulputate. Curabitur sodales urna et semper consequat. Fusce placerat ullamcorper tincidunt. Aenean accumsan porta magna, sit amet fringilla velit tempor nec. Aliquam eget odio in eros aliquam pharetra a a risus. Curabitur vitae diam vel leo pretium tristique id a mi. Integer ac mollis leo, ut luctus nisl.
-
-        Integer at sollicitudin libero, id cursus nibh. Curabitur ornare nibh eros, vel vulputate justo pellentesque quis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin velit risus, porttitor ac cursus eget, facilisis nec odio. Curabitur vel iaculis ante. Aenean faucibus orci vel nulla tincidunt condimentum. Donec tempor mollis vulputate. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed ac mauris felis.
-        
-        Maecenas est mauris, aliquet eu mi in, feugiat egestas sem. Aenean non lectus orci. Pellentesque ultrices, urna sed fringilla blandit, arcu libero tristique dolor, sollicitudin cursus eros velit ut eros. Nullam in porttitor lacus. Mauris vestibulum purus eu faucibus consequat. Nunc nec nisl erat. Sed mollis neque nec cursus porta. Sed sed ligula elit. Pellentesque vel dapibus magna, in auctor lorem.
-        
-        Praesent maximus euismod consequat. Donec vehicula pharetra purus et pretium. Nunc ac varius enim, et maximus tellus. Duis sodales ultricies diam quis hendrerit. Morbi felis sem, ultricies non ex a, iaculis lacinia nunc. Quisque aliquet et sapien a aliquet. Duis ullamcorper erat ac mi faucibus, ac rutrum magna pellentesque.</b></p>
+    <p><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis eros nec nibh laoreet pretium 
+        ac quis nisl. Nam mattis eros sem, eu sollicitudin justo convallis ac. Aenean dignissim diam nisl, 
+        vel sagittis metus porttitor sit amet. Aenean mollis rutrum venenatis. Suspendisse eu erat convallis, 
+        luctus mauris vel, gravida magna. Etiam pellentesque justo id tellus lobortis, eu pellentesque lorem 
+        vulputate. Curabitur sodales urna et semper consequat. Fusce placerat ullamcorper tincidunt. 
+        Aenean accumsan porta magna, sit amet fringilla velit tempor nec. Aliquam eget odio in eros aliquam 
+        pharetra a a risus. Curabitur vitae diam vel leo pretium tristique id a mi. Integer ac mollis leo, ut 
+        luctus nisl.
+        Integer at sollicitudin libero, id cursus nibh. Curabitur ornare nibh eros, vel vulputate justo 
+        pellentesque quis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
+        mus. Proin velit risus, porttitor ac cursus eget, facilisis nec odio. Curabitur vel iaculis ante. 
+        Aenean faucibus orci vel nulla tincidunt condimentum. Donec tempor mollis vulputate.</b></p>
 <script src="./assets/jv/script.js"></script>
 </body>
 </html>
