Finalizando a Aba Pets e Começando a Aba Produtos

--- a/pets.html
+++ b/pets.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Produtos</h1>
+        <h1>Atendimento Pets</h1>
         <div id="quadradobranco1"></div>
         <div id="Menu-Off">
             <ul>
@@ -50,11 +50,10 @@
         Sábado: das 09:00 até 15:00
         Domingo: Fechado
     </p>
+    <!--Mapa e Avaliações-->
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29253.52654791266!2d-46.69035877240249!3d-23.57954534235957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59c7dbf9ff57%3A0x4ca8eb5c4f7ecca9!2sFIAP%20-%20Paulista!5e0!3m2!1spt-PT!2sbr!4v1714735636656!5m2!1spt-PT!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="mapa"></iframe>
-    <div id="Avaliacao1"></div>
-        <b id="Nome1">Roberto Spreafico Neto</b>
-        <span id ="Star1" style="color: gold">★★★★★</span>
-        <p id="Ava1"><b>Muito Top, comprei meu pug ai, amei !</b></p>
-
+    <div id="Avaliacao1"><b id="Nome1">Roberto Spreafico Neto</b><span id ="Star1">★★★★★</span><p id="Ava1"><b>Muito Top, comprei meu pug ai, amei !</b></p></div>
+    <div id="Avaliacao2"><b id="Nome2">Matheus Polpo Bispo</b><span id ="Star2">★★★★★</span><p id="Ava2"><b>Sensacional! o atendimento foi rápido e pràtico.</b></p></div>
+    <div id="Avaliacao3"><b id="Nome3">Paulo Roberto Braga</b><span id ="Star3">★★★★★</span><p id="Ava3"><b>Fiz um empréstimo para comprar meu gatinho. Sabia que era meu dever cuidar dele.</b></p></div>
 </body>
 </html>
