Finalizando a Aba Produtos com uso de Cards e usando Hover para Animação

--- a/produtos.html
+++ b/produtos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Produtos</h1>
-        <div id="quadradobranco1"></div>
+        <div id="quadradobranco2"></div>
         <div id="Menu-Off">
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -28,6 +28,55 @@
             </nav>
     <script src="./assets/jv/script.js"></script>
     </header>
-    
+    <div class="container">
+        <!-- Repita este bloco para cada produto -->
+        <!--Card Brinquedo-->
+        <div class="card">
+          <img src="./assets/img/brinquedo.png" alt="Brinquedo Pet">
+          <div class="info">
+            <h3>Brinquedo Pet</h3>
+            <p>R$14.50</p>
+          </div>
+        </div>
+        <!--Card Tigela-->
+        <div class="card">
+          <img src="./assets/img/tigela.png" alt="Tigela Pet">
+          <div class="info">
+            <h3>Tigela de Pet</h3>
+            <p>R$26.90</p>
+          </div>
+        </div>
+        <!--Card Racao-->
+        <div class="card">
+            <img src="./assets/img/Racao.png" alt="Racao">
+            <div class="info">
+              <h3>Ração</h3>
+              <p>R$99.90</p>
+            </div>
+          </div>
+          <!--Card Shampoo-->
+          <div class="card">
+            <img src="./assets/img/toalha.png" alt="Toalha">
+            <div class="info">
+              <h3>Toalha Descartável</h3>
+              <p>R$26.90</p>
+            </div>
+          </div>
+          <!--Card Whiska-->
+          <div class="card">
+            <img src="./assets/img/wiska.png" alt="Whiska">
+            <div class="info">
+              <h3>Whiska</h3>
+              <p>R$19.90</p>
+            </div>
+          </div>
+          <!--Card Casa-->
+          <div class="card">
+            <img src="./assets/img/casa.png" alt="Casa">
+            <div class="info">
+              <h3>Casinha Pra Cachorro</h3>
+              <p>R$137.90</p>
+            </div>
+    </div>
 </body>
 </html>
