Criando a Responsividade Mobile

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <main>
         <section id="principal">
             <h2> Encontre seu</h2>
-            <h2> Melhor <span style="color: rgb(177, 131, 75)">Amigo</span></h2>
+            <h2> Melhor <span id="Amigo" style="color: rgb(177, 131, 75)">Amigo</span></h2>
             <p><b>Parceiros para uma Vida Mais Feliz!</b></p>
             <button>Nossos Serviços</button>
         </section>
