Finalizando a Home com Responsividade Mobile

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <div id="mobile"><img src="assets/img/mobiledog.png" alt="cachorromobile"/></div>
         <div id="quadradobranco"></div>
         <div id="cachorro"><img src="assets/img/cachorro.png" alt="cachorro"/></div>
         <div id="quadrado"></div>
