--- a/sobre.html
+++ b/sobre.html
@@ -1,45 +1,80 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br"> 
+<!-- Declaração do tipo de documento HTML e especificação do idioma como português do Brasil -->
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PetShop</title>
-    <!--Chamando CSS Externo-->
-    <link rel="stylesheet" href="./assets/css/estilo1.css">
+    <meta charset="UTF-8"> 
+    <!-- Define a codificação de caracteres como UTF-8 -->
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <!-- Configura a página para ser responsiva em dispositivos móveis -->
+
+    <title>PetShop</title> 
+    <!-- Define o título da página -->
+
+    <!-- Inclui uma folha de estilo CSS externa para estilização -->
+    <link rel="stylesheet" href="./assets/css/estilo1.css"> 
+
+    <!-- Define um ícone para a aba do navegador -->
+    <link rel="shortcut icon" href="./assets/img/icone.png" /> 
 </head>
+
 <body>
-    <header>
-        <h1>Sobre</h1>
-        <div id="quadradobranco"></div>
-        <div id="cachorro"><img src="assets/img/cachorrosobre.png" alt="cachorro"/></div>
-        <div id="Menu-Off">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="pets.html">Pets</a></li>
-                <li><a href="produtos.html">Produtos</a></li>
+    <header> 
+    <!-- Seção do cabeçalho da página -->
+
+        <h1>Sobre</h1> 
+        <!-- Título da página ou seção -->
+
+        <div id="quadradobranco"></div> 
+        <!-- Elemento de estilização ou espaçamento -->
+
+        <div id="cachorro"> 
+        <!-- Seção para uma imagem de um cachorro -->
+            <img src="assets/img/cachorrosobre.png" alt="cachorro"/> 
+            <!-- Imagem de um cachorro para a seção 'Sobre', com texto alternativo -->
+        </div>
+
+        <div id="Menu-Off"> 
+        <!-- Seção de menu para navegação pelo site -->
+            <ul> 
+            <!-- Lista de itens de navegação -->
+                <li><a href="index.html">Home</a></li> 
+                <!-- Link para a página inicial -->
+                <li><a href="sobre.html">Sobre</a></li> 
+                <!-- Link para a página 'Sobre', a atual -->
+                <li><a href="pets.html">Pets</a></li> 
+                <!-- Link para a página 'Pets' -->
+                <li><a href="produtos.html">Produtos</a></li> 
+                <!-- Link para a página 'Produtos' -->
             </ul>
         </div>
-            <nav>
-                <div id="Menu">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-            </nav>
+
+        <nav> 
+        <!-- Seção de navegação, possivelmente para dispositivos móveis -->
+            <div id="Menu"> 
+            <!-- Ícone do menu 'hamburger' para alternar visibilidade do menu -->
+                <span></span> 
+                <!-- Barra do menu -->
+                <span></span> 
+                <!-- Barra do menu -->
+                <span></span> 
+                <!-- Barra do menu -->
+            </div>
+        </nav>
     </header>
-    <p><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis eros nec nibh laoreet pretium 
-        ac quis nisl. Nam mattis eros sem, eu sollicitudin justo convallis ac. Aenean dignissim diam nisl, 
-        vel sagittis metus porttitor sit amet. Aenean mollis rutrum venenatis. Suspendisse eu erat convallis, 
-        luctus mauris vel, gravida magna. Etiam pellentesque justo id tellus lobortis, eu pellentesque lorem 
-        vulputate. Curabitur sodales urna et semper consequat. Fusce placerat ullamcorper tincidunt. 
-        Aenean accumsan porta magna, sit amet fringilla velit tempor nec. Aliquam eget odio in eros aliquam 
-        pharetra a a risus. Curabitur vitae diam vel leo pretium tristique id a mi. Integer ac mollis leo, ut 
-        luctus nisl.
-        Integer at sollicitudin libero, id cursus nibh. Curabitur ornare nibh eros, vel vulputate justo 
-        pellentesque quis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus 
-        mus. Proin velit risus, porttitor ac cursus eget, facilisis nec odio. Curabitur vel iaculis ante. 
-        Aenean faucibus orci vel nulla tincidunt condimentum. Donec tempor mollis vulputate.</b></p>
-<script src="./assets/jv/script.js"></script>
+
+    <p><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In erat lacus, pellentesque sit amet feugiat id, interdum nec eros. 
+        Sed sagittis finibus pulvinar. Donec sodales egestas ullamcorper. Proin finibus justo nunc, vehicula ultrices tellus luctus non. 
+        Quisque laoreet mattis accumsan. Proin viverra eros lobortis nibh eleifend laoreet. Maecenas at lacinia nulla. Quisque suscipit, mi ac imperdiet pellentesque, 
+        lacus mauris tempus mi, a egestas tellus odio vitae justo. Maecenas ac quam malesuada, semper libero sed, suscipit sapien.
+        Praesent malesuada augue ac tellus viverra imperdiet. Vivamus ut eleifend magna. Vivamus urna tellus, bibendum eu metus id, ultricies molestie lacus. 
+        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque in mi a ante tempor convallis non a turpis. 
+        Morbi porttitor efficitur imperdiet. Donec et velit imperdiet, lacinia nibh eget, euismod urna. Pellentesque varius consequat ipsum, vel suscipit odio convallis sit amet. 
+        Donec justo nulla, laoreet et tellus eu, porttitor malesuada massa.</b></p> 
+    <!-- Parágrafo com texto fictício 'Lorem Ipsum' para fornecer um exemplo de conteúdo -->
+   
+    <!-- Liga um arquivo JavaScript externo -->
+    <script src="./assets/jv/script.js"></script> 
 </body>
 </html>
