--- a/pets.html
+++ b/pets.html
@@ -1,59 +1,126 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br"> 
+<!-- Define o documento como HTML e especifica o idioma como português do Brasil -->
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pets</title>
-    <link rel="stylesheet" href="./assets/css/estilo1.css">
+    <meta charset="UTF-8"> 
+    <!-- Define a codificação de caracteres como UTF-8 -->
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <!-- Configura a página para ser responsiva em dispositivos móveis -->
+
+    <title>Pets</title> 
+    <!-- Define o título da página -->
+
+    <!-- Liga o arquivo CSS externo para estilização -->
+    <link rel="stylesheet" href="./assets/css/estilo1.css"> 
+
+    <!-- Define um ícone para a aba do navegador -->
+    <link rel="shortcut icon" href="./assets/img/icone.png" /> 
 </head>
+
 <body>
-    <header>
-        <h1>Atendimento Pets</h1>
-        <div id="quadradobranco1"></div>
-        <div id="Menu-Off">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="pets.html">Pets</a></li>
-                <li><a href="produtos.html">Produtos</a></li>
+    <header> 
+    <!-- Seção do cabeçalho -->
+
+        <h1>Pets</h1> 
+        <!-- Título da página ou seção -->
+
+        <div id="quadradobranco1"></div> 
+        <!-- Elemento de estilização ou espaçamento -->
+
+        <div id="Menu-Off"> 
+        <!-- Menu de navegação -->
+            <ul> 
+            <!-- Lista de itens -->
+                <li><a href="index.html">Home</a></li> 
+                <!-- Link para a página inicial -->
+                <li><a href="sobre.html">Sobre</a></li> 
+                <!-- Link para a página 'Sobre' -->
+                <li><a href="pets.html">Pets</a></li> 
+                <!-- Link para a página atual -->
+                <li><a href="produtos.html">Produtos</a></li> 
+                <!-- Link para a página 'Produtos' -->
             </ul>
         </div>
-            <nav>
-                <div id="Menu">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-            </nav>
-    <script src="./assets/jv/script.js"></script>
+
+        <nav> 
+        <!-- Seção para navegação -->
+            <div id="Menu"> 
+            <!-- Menu 'hamburger' para dispositivos móveis -->
+                <span></span> 
+                <!-- Barra do menu -->
+                <span></span> 
+                <!-- Barra do menu -->
+                <span></span> 
+                <!-- Barra do menu -->
+            </div>
+        </nav>
+
+    <!-- Liga um arquivo JavaScript externo -->
+    <script src="./assets/jv/script.js"></script> 
     </header>
-    <p><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris suscipit ligula a 
-        scelerisque dictum. Vivamus et massa non nisi posuere sagittis ut vitae tellus. 
-        Integer consequat elit vitae nunc rutrum, eu auctor dui varius. Cras feugiat, 
-        ligula non vulputate varius, urna elit efficitur lacus, rutrum tempor mauris diam non sem. 
-        Suspendisse eget scelerisque lectus, vel dignissim leo. Sed laoreet odio fringilla odio 
-        posuere, in tristique odio lobortis. Phasellus vitae enim nulla. Ut auctor vestibulum erat, 
-        non pharetra felis aliquet et.
-        Integer luctus rhoncus nibh sit amet facilisis. Suspendisse lacinia orci tellus, id semper 
-        lorem bibendum non. Suspendisse felis ante, ornare quis fermentum ut, accumsan sed lectus. 
-        Suspendisse ac interdum orci. Donec pharetra odio a nisl sollicitudin, vitae placerat turpis 
-        dictum. Morbi sed finibus magna. Morbi bibendum, nisl in mattis convallis, nisi ligula 
-        tristique dui, a cursus enim risus eget mi.</b></p>
-    <div id="agendar">Clique para Agendar</div>
-    <div id="atendimento"></div>
-    <p id="texto">Horários de atendimento:
-        Segunda: das 09:00 até 18:00
-        Terça: das 09:00 até 18:00
-        Quarta: das 09:00 até 18:00
-        Quinta: das 09:00 até 18:00
-        Sexta: das 09:00 até 18:00
-        Sábado: das 09:00 até 15:00
-        Domingo: Fechado
+
+    <p><b>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In erat lacus, pellentesque sit amet feugiat id, interdum nec eros. Sed sagittis finibus pulvinar. 
+        Donec sodales egestas ullamcorper. Proin finibus justo nunc, vehicula ultrices tellus luctus non. Quisque laoreet mattis accumsan. Proin viverra eros lobortis 
+        nibh eleifend laoreet. Maecenas at lacinia nulla. Quisque suscipit, mi ac imperdiet pellentesque, lacus mauris tempus mi, a egestas tellus odio vitae justo. 
+        Maecenas ac quam malesuada, semper libero sed, suscipit sapien.        Praesent malesuada augue ac tellus viverra imperdiet. Vivamus ut eleifend magna. 
+        Vivamus urna tellus, bibendum eu metus id, ultricies molestie lacus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
+        Pellentesque in mi a ante tempor convallis non a turpis. Morbi porttitor efficitur imperdiet. Donec et velit imperdiet, lacinia nibh eget, euismod urna. 
+        Pellentesque varius consequat ipsum, vel suscipit odio convallis sit amet. Donec justo nulla, laoreet et tellus eu, porttitor malesuada massa.</b></p> 
+    <!-- Texto genérico de exemplo com conteúdo de 'Lorem Ipsum' -->
+
+    <div id="agendar">Clique para Agendar</div> 
+    <!-- Um botão ou área clicável para agendar algo -->
+
+    <div id="atendimento"></div> 
+    <!-- Provavelmente um espaço para informações de atendimento -->
+
+    <p id="texto">Horários de atendimento: 
+    <!-- Texto que exibe horários de atendimento -->
+        Segunda: das 09:00 até 18:00 
+        Terça: das 09:00 até 18:00 
+        Quarta: das 09:00 até 18:00 
+        Quinta: das 09:00 até 18:00 
+        Sexta: das 09:00 até 18:00 
+        Sábado: das 09:00 até 15:00 
+        Domingo: Fechado 
     </p>
-    <!--Mapa e Avaliações-->
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29253.52654791266!2d-46.69035877240249!3d-23.57954534235957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59c7dbf9ff57%3A0x4ca8eb5c4f7ecca9!2sFIAP%20-%20Paulista!5e0!3m2!1spt-PT!2sbr!4v1714735636656!5m2!1spt-PT!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="mapa"></iframe>
-    <div id="Avaliacao1"><b id="Nome1">Roberto Spreafico Neto</b><span id ="Star1">★★★★★</span><p id="Ava1"><b>Muito Top, comprei meu pug ai, amei !</b></p></div>
-    <div id="Avaliacao2"><b id="Nome2">Matheus Polpo Bispo</b><span id ="Star2">★★★★★</span><p id="Ava2"><b>Sensacional! o atendimento foi rápido e pràtico.</b></p></div>
-    <div id="Avaliacao3"><b id="Nome3">Paulo Roberto Braga</b><span id ="Star3">★★★★★</span><p id="Ava3"><b>Fiz um empréstimo para comprar meu gatinho. Sabia que era meu dever cuidar dele.</b></p></div>
+
+    <!-- Mapa incorporado do Google Maps -->
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29253.52654791266!2d-46.69035877240249!3d-23.57954534235957!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59c7dbf9ff57%3A0x4ca8eb5c4f7ecca9!2sFIAP%20-%20Paulista!5e0!3m2!1spt-PT!2sbr!4v1714735636656!5m2!1spt-PT!2sbr" 
+    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="mapa"></iframe> 
+    <!-- Define um mapa do Google Maps com configurações de segurança -->
+
+    <div id="Avaliacao1"> 
+    <!-- Div para a primeira avaliação -->
+        <b id="Nome1">Roberto Spreafico Neto</b> 
+        <!-- Nome do avaliador -->
+        <span id ="Star1">★★★★★</span> 
+        <!-- Avaliação com estrelas -->
+        <p id="Ava1"><b>Muito Top, comprei meu pug ai, amei !</b></p> 
+        <!-- Comentário da avaliação -->
+    </div>
+
+    <div id="Avaliacao2"> 
+    <!-- Div para a segunda avaliação -->
+        <b id="Nome2">Matheus Polpo Bispo</b> 
+        <!-- Nome do avaliador -->
+        <span id ="Star2">★★★★★</span> 
+        <!-- Avaliação com estrelas -->
+        <p id="Ava2"><b>Sensacional! o atendimento foi rápido e prático.</b></p> 
+        <!-- Comentário da avaliação -->
+    </div>
+
+    <div id="Avaliacao3"> 
+    <!-- Div para a terceira avaliação -->
+        <b id="Nome3">Paulo Roberto Braga</b> 
+        <!-- Nome do avaliador -->
+        <span id ="Star3">★★★★★</span> 
+        <!-- Avaliação com estrelas -->
+        <p id="Ava3"><b>Fiz um empréstimo para comprar meu gatinho. Sabia que era meu dever cuidar dele.</b></p> 
+        <!-- Comentário da avaliação -->
+    </div>
+
 </body>
 </html>
